--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -1,24 +1,20 @@
 <div class="alapkeret">
   <h5>Volume</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
         <div class="editform-label">Új volume max. méret</div>
-        <input type="number" class="editform-number" id="m1"
-               autocomplete="off"
-               [(ngModel)]="cVolume.UjvolumeMaxmeret" name="m1">
+        <input type="number" class="editform-number" formControlName="ujvolumemaxmeret">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Új volume elérési út</div>
-        <input type="text" class="editform-edit em15width" id="m2"
-               autocomplete="off"
-               [(ngModel)]="cVolume.UjvolumeEleresiut" name="m2">
+        <input type="text" class="editform-edit em15width" formControlName="ujvolumeeleresiut">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
