--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -1,23 +1,21 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Pénztártételek exportja</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
         <div class="editform-label">Dátumtól</div>
-        <input type="date" class="editform-date" id="tol"
-               [(ngModel)]="tol" name="tol">
+        <input type="date" class="editform-date" formControlName="tol">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Dátumig</div>
-        <input type="date" class="editform-date" id="ig"
-               [(ngModel)]="ig" name="ig">
+        <input type="date" class="editform-date" formControlName="ig">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
+      <button class="toolbutton" type="button" (click)="onCancel()" [disabled]="!eppFrissit">Stop</button>
     </div>
   </form>
 </div>
