--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -2,42 +2,33 @@
   <h5 *ngIf="uj">Új {{cikkservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{cikkservice.cim}} módosítása</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Megnevezés</div>
-        <input type="text" class="editform-edit cikkwidth" id="megnevezes"
-               maxlength="100" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Megnevezes" name="megnevezes">
+        <input type="text" class="editform-edit cikkwidth" formControlName="megnevezes">
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Me</div>
-        <input type="text" class="editform-edit zoomedit kisprimitivwidth" id="me"
-               maxlength="10" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Me" name="me">
+        <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="me">
         <button class="toolbutton" type="button" (click)="MeZoom()">...</button>
       </div>
 
       <div class="editform-row">
         <div class="editform-label">ÁFA kulcs</div>
-        <input type="text" class="editform-edit zoomedit kisprimitivwidth" id="afakulcs"
-               maxlength="10" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Afakulcs" name="afakulcs">
+        <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="afakulcs">
         <button class="toolbutton" type="button" (click)="AfakulcsZoom()">...</button>
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Egységár</div>
-        <input type="number" class="editform-number" id="egysegar"
-               maxlength="10" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Egysegar" name="egysegar">
+        <input type="number" class="editform-number" formControlName="egysegar">
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Készletet képez</div>
-        <select type="text" class="editform-combo"
-                [(ngModel)]="DtoEdited.Keszletetkepez" name="kk">
+        <select type="text" class="editform-combo" formControlName="kk">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
@@ -47,36 +38,31 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Tömeg, kg</div>
-        <input type="number" class="editform-number" id="tomeg"
-               maxlength="10" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Tomegkg" name="tomeg">
+        <input type="number" class="editform-number" formControlName="tomeg">
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Termékdíj KT</div>
-        <input type="text" class="editform-edit zoomedit primitivwidth" id="termekdijkt"
-               maxlength="10" autocomplete="off"
-               [(ngModel)]="DtoEdited.Termekdijkt" name="termekdijkt">
+        <input type="text" class="editform-edit zoomedit primitivwidth" formControlName="termekdijkt">
         <button class="toolbutton" type="button" (click)="TermekdijZoom()">...</button>
+        <button class="toolbutton" type="button" (click)="TermekdijTorles()">
+          <i class="fa fa-close" aria-hidden="true"></i>
+        </button>
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Termékdíj megnevezés</div>
-        <input type="text" class="editform-edit em15width" id="termekdijmegnevezes"
-               autocomplete="off" readonly
-               [(ngModel)]="DtoEdited.Termekdijmegnevezes" name="termekdijmegnevezes">
+        <input type="text" class="editform-edit em15width" formControlName="termekdijmegnevezes" disabled>
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Termékdíj egységár</div>
-        <input type="number" class="editform-number" id="termekdijegysegar"
-               autocomplete="off" readonly
-               [(ngModel)]="DtoEdited.Termekdijegysegar" name="termekdijegysegar">
+        <input type="number" class="editform-number" formControlName="termekdijegysegar" disabled>
       </div>
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
